improved the interface, english text, removed salary.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,10 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 09 15:03:06 EDT 2013
+#Sun Apr 14 22:39:35 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_bigtag_id=Id
-label_com_aeiou_bigbang_domain_bigtag_owner=\u4E66\u7B7E/\u65E5\u5FD7
+label_com_aeiou_bigbang_domain_bigtag_owner=-\u4E66\u7B7E/\u65E5\u5FD7
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=\u540D\u79F0 *
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
@@ -72,7 +72,7 @@ label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_balance=\u79EF\u5206\uFF1A{0}\u91D1\u5E01
+label_public_balance=\u7D2F\u79EF\uFF1A{0}\u91D1\u5E01
 label_public_expectedSalary=\u6708\u85AA\uFF1A{0}\u91D1\u5E01
 label_public_firesomeone=\u4E0D\u518D\u5173\u6CE8
 label_public_hiresomeone=\u6DFB\u52A0\u5230\u6211\u7684\u7A7A\u95F4
