--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,10 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 09 15:03:06 EDT 2013
+#Sun Apr 14 22:39:34 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_id=Id
-label_com_aeiou_bigbang_domain_bigtag_owner=Type
+label_com_aeiou_bigbang_domain_bigtag_owner=Bookmark
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
@@ -20,15 +20,15 @@ label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
 label_com_aeiou_bigbang_domain_content_authority=Who Can See
-label_com_aeiou_bigbang_domain_content_commonbigtag=Public Space Tag *
-label_com_aeiou_bigbang_domain_content_conentcache=Can Copy The Content Here
+label_com_aeiou_bigbang_domain_content_commonbigtag=Main Category Tag*
+label_com_aeiou_bigbang_domain_content_conentcache=Copy The Content Here
 label_com_aeiou_bigbang_domain_content_id=Id
-label_com_aeiou_bigbang_domain_content_markdate=Mark Time
+label_com_aeiou_bigbang_domain_content_markdate=When Shared
 label_com_aeiou_bigbang_domain_content_plural=Contents
-label_com_aeiou_bigbang_domain_content_publisher=Publisher
+label_com_aeiou_bigbang_domain_content_publisher=Sharer
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL *
 label_com_aeiou_bigbang_domain_content_title=Title *
-label_com_aeiou_bigbang_domain_content_uncommonbigtag=Personal Space Tag
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=Your Category Tag
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -54,29 +54,29 @@ label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_lastupdate=Last Updated
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
-label_com_aeiou_bigbang_domain_twitter_twitdate=Last Edit Date
+label_com_aeiou_bigbang_domain_twitter_twitdate=Last Edited
 label_com_aeiou_bigbang_domain_twitter_twitent=Content
 label_com_aeiou_bigbang_domain_twitter_twittertag=Type
 label_com_aeiou_bigbang_domain_twitter_twtitle=Title
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
-label_com_aeiou_bigbang_domain_useraccount_balance=Balance
-label_com_aeiou_bigbang_domain_useraccount_description=Description
+label_com_aeiou_bigbang_domain_useraccount_balance=Account
+label_com_aeiou_bigbang_domain_useraccount_description=Signature
 label_com_aeiou_bigbang_domain_useraccount_email=Email
 label_com_aeiou_bigbang_domain_useraccount_id=Id
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
-label_com_aeiou_bigbang_domain_useraccount_listento=Listento
+label_com_aeiou_bigbang_domain_useraccount_listento=Employee
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_balance=Your Balance\: {0} Golden Coint
+label_public_balance=Achievement\: {0} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
-label_public_firesomeone=It's time to say Good-Bye, sorry\!
-label_public_hiresomeone=This guy is amazing, let him work for me\!
-label_public_index=Welcome to the space of {0}----{1}
+label_public_firesomeone=Unfollow
+label_public_hiresomeone=Add to My Space
+label_public_index=Welcome to {0}'s Space----{1}
 label_rememberme=Remember Me
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
@@ -101,11 +101,11 @@ menu_item_twitter_list_label=Twitters
 menu_item_twitter_new_label=Twitter
 menu_item_useraccount_list_label=User Accounts
 menu_item_useraccount_new_label=User Account
-relayout_close=hide
-relayout_list_size=items to display
-relayout_move_down=move down
-relayout_move_left=move to left
-relayout_move_right=move to right
-relayout_move_up=move up
-relayout_reset=relayout
+relayout_close=Hide
+relayout_list_size=Items Displayed
+relayout_move_down=Move Down
+relayout_move_left=Move Left
+relayout_move_right=Move Right
+relayout_move_up=Move Up
+relayout_reset=Reset Layout
 relayout_submit=Submit
