--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 09 15:03:06 EDT 2013
+#Sun Apr 14 22:39:35 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -60,19 +60,19 @@ label_com_aeiou_bigbang_domain_twitter_twittertag=Type
 label_com_aeiou_bigbang_domain_twitter_twtitle=Title
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
-label_com_aeiou_bigbang_domain_useraccount_balance=Balance
+label_com_aeiou_bigbang_domain_useraccount_balance=Compte
 label_com_aeiou_bigbang_domain_useraccount_description=Description
 label_com_aeiou_bigbang_domain_useraccount_email=Email
 label_com_aeiou_bigbang_domain_useraccount_id=Id
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
-label_com_aeiou_bigbang_domain_useraccount_listento=Listento
+label_com_aeiou_bigbang_domain_useraccount_listento=
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_balance=Your Balance\: {} Golden Coint
+label_public_balance=Achievement\:\: {} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=It's time to say Good-Bye, sorry\!
 label_public_hiresomeone=This guy is amazing, let him work for me\!
@@ -101,7 +101,7 @@ menu_item_twitter_list_label=Twitters
 menu_item_twitter_new_label=Twitter
 menu_item_useraccount_list_label=User Accounts
 menu_item_useraccount_new_label=User Account
-relayout_close=hide
+relayout_close=Cacher
 relayout_list_size=items to display\:
 relayout_move_down=move down
 relayout_move_left=move to left
