modified the language to a name of community.

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 02 17:34:40 EDT 2013
+#Wed Apr 17 10:20:03 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -71,9 +71,9 @@ field_required=required
 field_simple_validation=Enter {0} {1}
 global_generic={0}
 global_language=Language
-global_language_chinese=\u4E2D\u6587
-global_language_english=English
-global_language_french=Fran\u00E7ais
+global_language_chinese=\u4E2D\u6587\u793E\u533A
+global_language_english=English Community
+global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
 global_menu_accountsManage=Manage my account
 global_menu_contentsManage=Manage my contents
