added the resource back, so I learned that should not search the name of resource in project. the name is coposed out.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Mon Apr 15 14:48:49 EDT 2013
+#Wed Apr 17 11:49:22 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_bigtag_id=Id
+label_com_aeiou_bigbang_domain_bigtag_owner=-\u4E66\u7B7E/\u65E5\u5FD7
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=\u540D\u79F0 *
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
