--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 17 11:30:44 EDT 2013
+#Wed Apr 17 11:49:22 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_id=Id
+label_com_aeiou_bigbang_domain_bigtag_owner=Type
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
