added some Resource for leaving message function

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 17 10:20:03 EDT 2013
+#Tue Apr 23 15:09:09 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -41,6 +41,8 @@ button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u65B0\u95FB\uFF0C\u8D44\u6599\uFF0C\u56FE\u50CF\uFF0C\u4E66\u7B7E
 contributeTwitter=\u7948\u7977\uFF0C\u7B14\u8BB0\uFF0C\u5907\u5FD8
+default_twitterConent_for_message=\u8FD9\u91CC\u7528\u6765\u663E\u793A\u6240\u6709\u7684\u8BBF\u95EE\u8005\u7559\u8A00
+default_twitterTitle_for_message=\u6536\u4EF6\u7BB1
 entity_create=\u6DFB\u52A0{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
@@ -79,9 +81,11 @@ global_menu_accountsManage=\u7BA1\u7406\u6211\u7684\u7528\u6237\u4FE1\u606F
 global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
 global_menu_diaryManage=\u7BA1\u7406\u6211\u7684\u7B14\u8BB0
 global_menu_find=Find by {0}
+global_menu_inboxManage=\u7BA1\u7406\u6211\u6536\u5230\u7684\u7559\u8A00
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u731B\u51FB\u8FD9\u91CC\u8DDF\u670B\u53CB\u5BB6\u4EBA\u5206\u4EAB\uFF01\u5171\u540C\u7684\u8BDD\u9898\u6C38\u8FDC\u662F\u5BB6\u4EBA\u670B\u53CB\u6240\u559C\u7231\u7684\u3002
+global_menu_newmessage=\u7ED9\u7A7A\u95F4\u4E3B\u4EBA\u7559\u4E2A\u8A00\uFF1F\u6CA1\u95EE\u9898\uFF0C\u5982\u679C\u4E0D\u60F3\u8BA9\u522B\u4EBA\u770B\u5230\uFF0C\u8BF7\u8BB0\u5F97\u4FDD\u5B58\u524D\u8BBE\u7F6E\u6210\u201C\u4EC5\u5BF9\u7A7A\u95F4\u4E3B\u4EBA\u53EF\u89C1\u201D\u3002
 global_menu_newnote=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F\u5199\u4E0B\u6765\uFF0C\u8BA9\u5BB6\u4EBA\u4E86\u89E3\uFF0C\u8BA9\u5C81\u6708\u89C1\u8BC1\uFF01
 global_menu_readmore=>>>
 global_menu_resetView=\u4EE5\u9ED8\u8BA4\u987A\u5E8F\u663E\u793A\u6240\u6709\u7684\u6807\u7B7E
@@ -122,3 +126,4 @@ webflow_state2_title=Spring Web Flow - View State Two
 welcome_h3=\u6B22\u8FCE\u56DE\u5230BookMarks\uFF01
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
+writeMessageToSpaceOwner=\u7ED9{0}\u7559\u8A00  
