--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 17 10:20:03 EDT 2013
+#Tue Apr 23 15:09:09 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -41,6 +41,8 @@ button_submit=Submit
 button_update=Update
 contributeContent=I just got something\!
 contributeTwitter=I'm gonna write somthing\!
+default_twitterConent_for_message=The Message From Visitors
+default_twitterTitle_for_message=Inbox
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
@@ -79,9 +81,11 @@ global_menu_accountsManage=Manage my account
 global_menu_contentsManage=Manage my contents
 global_menu_diaryManage=Mange my notes
 global_menu_find=Find by {0}
+global_menu_inboxManage=Manage my messages
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\!
+global_menu_newmessage=Leave a message to the owner? No problem\! While please set it as private if you don't want others to see this message.
 global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
 global_menu_readmore=>>>
 global_menu_resetView=Display all tags in a default order
@@ -122,3 +126,4 @@ webflow_state2_title=Spring Web Flow - View State Two
 welcome_h3=Welcome Back Home\!
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
+writeMessageToSpaceOwner=Leave {0} a Message  
