--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 17 11:49:22 EDT 2013
+#Tue Apr 23 11:38:24 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -36,6 +36,7 @@ label_com_aeiou_bigbang_domain_customize_cusvalue=Cus Value
 label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
+label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
 label_com_aeiou_bigbang_domain_remark=Remark
 label_com_aeiou_bigbang_domain_remark_authority=Authority
 label_com_aeiou_bigbang_domain_remark_content=Content
