updated web mvc for new added MessageTable (used web mvc all, other controllers were also updated, while I guess should not have any relation with other controller, so I rolled them back!)

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 11:38:24 EDT 2013
+#Tue Apr 23 22:48:21 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -37,6 +37,14 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
 label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
+label_com_aeiou_bigbang_domain_message_content=\u5185\u5BB9
+label_com_aeiou_bigbang_domain_message_id=Id
+label_com_aeiou_bigbang_domain_message_plural=\u7559\u8A00
+label_com_aeiou_bigbang_domain_message_posttime=\u65F6\u95F4
+label_com_aeiou_bigbang_domain_message_receiver=\u6536\u4FE1\u4EBA
+label_com_aeiou_bigbang_domain_message_sender=\u6765\u81EA
+label_com_aeiou_bigbang_domain_message_status=\u72B6\u6001
+label_com_aeiou_bigbang_domain_message_version=\u7248\u672C
 label_com_aeiou_bigbang_domain_remark=Remark
 label_com_aeiou_bigbang_domain_remark_authority=Authority
 label_com_aeiou_bigbang_domain_remark_content=Content
@@ -84,6 +92,7 @@ menu_category_circle_label=Circle
 menu_category_content_label=Content
 menu_category_controller_label=Controller
 menu_category_customize_label=Customize
+menu_category_message_label=\u7559\u8A00
 menu_category_remark_label=Remark
 menu_category_twitter_label=Twitter
 menu_category_useraccount_label=User Account
@@ -96,6 +105,8 @@ menu_item_content_new_label=Content
 menu_item_controller__publicindex_id_label=Public Controller View
 menu_item_customize_list_label=Customizes
 menu_item_customize_new_label=Customize
+menu_item_message_list_label=\u7559\u8A00
+menu_item_message_new_label=\u7559\u8A00
 menu_item_remark_list_label=Remarks
 menu_item_remark_new_label=Remark
 menu_item_twitter_list_label=Twitter
