--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 11:38:24 EDT 2013
+#Tue Apr 23 22:48:21 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -37,6 +37,14 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
 label_com_aeiou_bigbang_domain_message=Leave message to {0}
+label_com_aeiou_bigbang_domain_message_content=Content
+label_com_aeiou_bigbang_domain_message_id=Id
+label_com_aeiou_bigbang_domain_message_plural=Messages
+label_com_aeiou_bigbang_domain_message_posttime=Post Time
+label_com_aeiou_bigbang_domain_message_receiver=Receiver
+label_com_aeiou_bigbang_domain_message_sender=Sender
+label_com_aeiou_bigbang_domain_message_status=Status
+label_com_aeiou_bigbang_domain_message_version=Version
 label_com_aeiou_bigbang_domain_remark=Remark
 label_com_aeiou_bigbang_domain_remark_authority=Authority
 label_com_aeiou_bigbang_domain_remark_content=Content
@@ -84,6 +92,7 @@ menu_category_circle_label=Circle
 menu_category_content_label=Content
 menu_category_controller_label=Controller
 menu_category_customize_label=Customize
+menu_category_message_label=Message
 menu_category_remark_label=Remark
 menu_category_twitter_label=Twitter
 menu_category_useraccount_label=User Account
@@ -96,6 +105,8 @@ menu_item_content_new_label=Content
 menu_item_controller__publicindex_id_label=Public Controller View
 menu_item_customize_list_label=Customizes
 menu_item_customize_new_label=Customize
+menu_item_message_list_label=Messages
+menu_item_message_new_label=Message
 menu_item_remark_list_label=Remarks
 menu_item_remark_new_label=Remark
 menu_item_twitter_list_label=Twitters
