messaga function V0.1! (also added list all message function.) also added status field into Content Table, and login time and check message time fields into UserAccount Table.

--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 22:48:21 EDT 2013
+#Wed Apr 24 13:24:34 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -73,12 +73,15 @@ label_com_aeiou_bigbang_domain_useraccount_balance=Compte
 label_com_aeiou_bigbang_domain_useraccount_description=Description
 label_com_aeiou_bigbang_domain_useraccount_email=Email
 label_com_aeiou_bigbang_domain_useraccount_id=Id
+label_com_aeiou_bigbang_domain_useraccount_lastlogintime=Last Login Time
+label_com_aeiou_bigbang_domain_useraccount_lastreadmessage=Last Check Message Time
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=Employee
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
+label_com_aeiou_bigbang_domain_useraccount_status=Status
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_balance=Achievement\:\: {} Golden Coint
