--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 22:48:21 EDT 2013
+#Wed Apr 24 13:24:34 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -73,12 +73,15 @@ label_com_aeiou_bigbang_domain_useraccount_balance=\u8D26\u6237
 label_com_aeiou_bigbang_domain_useraccount_description=\u4E2A\u6027\u7B7E\u540D
 label_com_aeiou_bigbang_domain_useraccount_email=\u7535\u5B50\u90AE\u7BB1
 label_com_aeiou_bigbang_domain_useraccount_id=Id
+label_com_aeiou_bigbang_domain_useraccount_lastlogintime=\u6700\u8FD1\u4E00\u6B21\u767B\u5F55
+label_com_aeiou_bigbang_domain_useraccount_lastreadmessage=\u6700\u8FD1\u4E00\u6B21\u67E5\u770B\u4FE1\u606F
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=\u96C7\u7528\u5458\u5DE5
 label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
 label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
+label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_balance=\u7D2F\u79EF\uFF1A{0}\u91D1\u5E01
