I tried modified a field in Message Table, everything seems OK, all the code modified by Roo while the data in DB is lost. (I renamed sender to publisher to keep same with remark and twitter) when I list all messages, I found the publisher were all empty.
Now the version Can not open inbox, bicause there's exception when persisting the Useraccount with new time.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 24 13:24:34 EDT 2013
+#Wed Apr 24 15:44:27 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -41,6 +41,7 @@ label_com_aeiou_bigbang_domain_message_content=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_message_id=Id
 label_com_aeiou_bigbang_domain_message_plural=\u7559\u8A00
 label_com_aeiou_bigbang_domain_message_posttime=\u65F6\u95F4
+label_com_aeiou_bigbang_domain_message_publisher=\u6765\u81EA
 label_com_aeiou_bigbang_domain_message_receiver=\u6536\u4FE1\u4EBA
 label_com_aeiou_bigbang_domain_message_sender=\u6765\u81EA
 label_com_aeiou_bigbang_domain_message_status=\u72B6\u6001
