--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 24 13:24:34 EDT 2013
+#Wed Apr 24 15:44:27 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -41,6 +41,7 @@ label_com_aeiou_bigbang_domain_message_content=Content
 label_com_aeiou_bigbang_domain_message_id=Id
 label_com_aeiou_bigbang_domain_message_plural=Messages
 label_com_aeiou_bigbang_domain_message_posttime=Post Time
+label_com_aeiou_bigbang_domain_message_publisher=Publisher
 label_com_aeiou_bigbang_domain_message_receiver=Receiver
 label_com_aeiou_bigbang_domain_message_sender=Sender
 label_com_aeiou_bigbang_domain_message_status=Status
