no need to generate a defautl twitter anymore, I generated a default message to welcome new user instead.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 15:09:09 EDT 2013
+#Wed Apr 24 16:15:51 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -41,8 +41,7 @@ button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u65B0\u95FB\uFF0C\u8D44\u6599\uFF0C\u56FE\u50CF\uFF0C\u4E66\u7B7E
 contributeTwitter=\u7948\u7977\uFF0C\u7B14\u8BB0\uFF0C\u5907\u5FD8
-default_twitterConent_for_message=\u8FD9\u91CC\u7528\u6765\u663E\u793A\u6240\u6709\u7684\u8BBF\u95EE\u8005\u7559\u8A00
-default_twitterTitle_for_message=\u6536\u4EF6\u7BB1
+default_welcome_message=\u6B22\u8FCE\u6B22\u8FCE\:]\uFF0C\u5982\u6709\u5E0C\u671B\u6539\u8FDB\u7684\u5730\u65B9\uFF0C\u8BF7\u5230tao\u7684\u7A7A\u95F4\u7559\u8A00\u3002
 entity_create=\u6DFB\u52A0{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
