--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 23 15:09:09 EDT 2013
+#Wed Apr 24 16:15:51 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -41,8 +41,7 @@ button_submit=Submit
 button_update=Update
 contributeContent=I just got something\!
 contributeTwitter=I'm gonna write somthing\!
-default_twitterConent_for_message=The Message From Visitors
-default_twitterTitle_for_message=Inbox
+default_welcome_message=Welcome\uFF0Cshould you have any question, please go to Tao's space and leave message.
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
