added new message amount field into Useraccount.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Created by JInto - www.guh-software.de
-#Wed Apr 24 15:44:27 EDT 2013
+#Updated at Wed Apr 24 16:30:54 EDT 2013
+#Wed Apr 24 16:30:54 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -79,6 +79,7 @@ label_com_aeiou_bigbang_domain_useraccount_lastreadmessage=\u6700\u8FD1\u4E00\u6
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=\u96C7\u7528\u5458\u5DE5
 label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
+label_com_aeiou_bigbang_domain_useraccount_newmessageamount=New Message Amount
 label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
