sort function for list_publsher and list_more

--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 24 15:44:27 EDT 2013
+#Wed May 01 23:57:26 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -79,12 +79,17 @@ label_com_aeiou_bigbang_domain_useraccount_lastreadmessage=Last Check Message Ti
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=Employee
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
+label_com_aeiou_bigbang_domain_useraccount_newmessageamount=New Message Amount
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_status=Status
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
+label_com_aeiou_bigbang_personalspace=Personal Space
+label_com_aeiou_bigbang_publicspace=Public Space
+label_com_aeiou_bigbang_publisher=Sharer
+label_com_aeiou_bigbang_title=Title
 label_public_balance=Achievement\:\: {} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=It's time to say Good-Bye, sorry\!
