--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Apr 24 16:30:54 EDT 2013
-#Wed Apr 24 16:30:54 EDT 2013
+#Created by JInto - www.guh-software.de
+#Wed May 01 23:57:26 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -79,13 +79,17 @@ label_com_aeiou_bigbang_domain_useraccount_lastreadmessage=\u6700\u8FD1\u4E00\u6
 label_com_aeiou_bigbang_domain_useraccount_layout=Layout
 label_com_aeiou_bigbang_domain_useraccount_listento=\u96C7\u7528\u5458\u5DE5
 label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
-label_com_aeiou_bigbang_domain_useraccount_newmessageamount=New Message Amount
+label_com_aeiou_bigbang_domain_useraccount_newmessageamount=-\u65B0\u7559\u8A00\u6570\u76EE
 label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
 label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
+label_com_aeiou_bigbang_personalspace=\u4E2A\u4EBA\u7A7A\u95F4
+label_com_aeiou_bigbang_publicspace=\u516C\u5171\u7A7A\u95F4
+label_com_aeiou_bigbang_publisher=\u91C7\u7F16
+label_com_aeiou_bigbang_title=\u6807\u9898
 label_public_balance=\u7D2F\u79EF\uFF1A{0}\u91D1\u5E01
 label_public_expectedSalary=\u6708\u85AA\uFF1A{0}\u91D1\u5E01
 label_public_firesomeone=\u4E0D\u518D\u5173\u6CE8
