partial commit of the i18n problem, now we know how to make it work----just deliever the request from controller to BigAuthority.toString() method. while because we changed the method interface, the *.aj files are also modified, the worst thing is that we haven't told mr. Roo that we have done that modification... Welcome, Mass:)

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed May 01 23:57:26 EDT 2013
+#Thu May 02 16:20:30 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -87,6 +87,7 @@ label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_com_aeiou_bigbang_personalspace=\u4E2A\u4EBA\u7A7A\u95F4
+label_com_aeiou_bigbang_privacyLevel=\u5B89\u5168\u7B49\u7EA7
 label_com_aeiou_bigbang_publicspace=\u516C\u5171\u7A7A\u95F4
 label_com_aeiou_bigbang_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_title=\u6807\u9898
