--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 24 16:15:51 EDT 2013
+#Thu May 02 17:03:00 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -8,6 +8,7 @@ Content=Content
 Customize=Customize
 NotesAndPrays=Notes and Prays de {0}
 NotesAndPraysOfFriend=Notes and Prays de sami et ...
+ONLY_FOR_OWNER=visible to only the owner
 ONLY_FOR_SELECTED_PERSON=visible to selected person
 ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Remark
