--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed May 01 23:57:26 EDT 2013
+#Thu May 02 16:20:30 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -87,6 +87,7 @@ label_com_aeiou_bigbang_domain_useraccount_status=Status
 label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_com_aeiou_bigbang_personalspace=Personal Space
+label_com_aeiou_bigbang_privacyLevel=Privacy Level
 label_com_aeiou_bigbang_publicspace=Public Space
 label_com_aeiou_bigbang_publisher=Sharer
 label_com_aeiou_bigbang_title=Title
