added the plugin for user to add bookmark quickly. while for now it's hard coded for only english server(all creating content will go to en.shareTheGoodOnes.com)

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,7 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Thu May 02 17:03:00 EDT 2013
+#Tue May 21 09:37:09 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
+AddOnName=ShareTheGoodOnes\!
+AddOnNotice=Drag the quick tool to bookmarks toolbar-->
 Big\ Tag=Category
 Circle=Circle
 Content=Content
