--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Tue May 21 17:44:18 EDT 2013
+#Tue May 21 23:34:45 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
-AddOnNotice=\u62D6\u5230\u6536\u85CF\u680F\u4F7F\u5171\u4EAB\u66F4\u4FBF\u6377\:
+AddOnNotice=\u62D6\u52A8\u5FEB\u6377\u5DE5\u5177\u5230\u6536\u85CF\u680F\:
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
