--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Tue May 21 17:44:18 EDT 2013
+#Tue May 21 23:34:45 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
-AddOnNotice=Drag this to bookmarks bar to quick share\:
+AddOnNotice=Drag the quick tool to bookmarks bar\:
 Big\ Tag=Category
 Circle=Circle
 Content=Content
