be careful with using "'" in i18n files. it will cause the parameter behide of it stop working.

--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu May 02 16:20:30 EDT 2013
+#Wed May 22 17:17:00 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -95,7 +95,7 @@ label_public_balance=Achievement\: {0} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=Unfollow
 label_public_hiresomeone=Add to My Space
-label_public_index=Welcome to {0}'s Space----{1}
+label_public_index=Welcome to the space of {0}----{1}
 label_rememberme=Remember Me
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
