fixed the problem that when user hasn't login, it will cause exception when he add some comments and commit. now we use the publicController to response for the request for only displaying detail, and use remarkController to response for request for remarkable detail display, and saving the remarks. we also added a remarkcontroller bean, so we can reuse the code in remarkcontroller from publiccontroller.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 21 23:34:45 EDT 2013
+#Thu May 23 15:38:50 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -79,6 +79,7 @@ global_language_chinese=\u4E2D\u6587\u793E\u533A
 global_language_english=English Community
 global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
+global_login_notice=\u8BF7\u70B9\u51FB\u8FD9\u91CC\u767B\u5F55\u5E76\u6DFB\u52A0\u8BC4\u8BBA\uFF01  
 global_menu_accountsManage=\u7BA1\u7406\u6211\u7684\u7528\u6237\u4FE1\u606F
 global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
 global_menu_diaryManage=\u7BA1\u7406\u6211\u7684\u7B14\u8BB0
