--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 21 23:34:45 EDT 2013
+#Thu May 23 15:38:50 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
@@ -79,6 +79,7 @@ global_language_chinese=\u4E2D\u6587\u793E\u533A
 global_language_english=English Community
 global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
+global_login_notice=Please click here to log in and add comments\!  
 global_menu_accountsManage=Manage my account
 global_menu_contentsManage=Manage my contents
 global_menu_diaryManage=Mange my notes
