modified the string in athority options.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu May 23 15:38:50 EDT 2013
+#Tue Jun 04 17:24:35 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -10,7 +10,7 @@ Content=\u5185\u5BB9
 Customize=\u81EA\u5B9A\u4E49
 NotesAndPrays=\u7948\u7977/\u968F\u7B14\u2014{0}
 NotesAndPraysOfFriend=\u7948\u7977/\u968F\u7B14\u2014{0}\u7684\u5BB6\u4EBA\u548C\u670B\u53CB
-ONLY_FOR_OWNER=\u4EC5\u7A7A\u95F4\u4E3B\u4EBA\u53EF\u89C1
+ONLY_FOR_RECEIVER=\u4EC5\u5BF9\u63A5\u6536\u8005\u53EF\u89C1
 ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
 ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
