--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu May 23 15:38:50 EDT 2013
+#Tue Jun 04 17:24:35 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
@@ -10,7 +10,7 @@ Content=Content
 Customize=Customize
 NotesAndPrays=Notes and Prays from {0}
 NotesAndPraysOfFriend=Notes and Prays From {0}'s Family and Friends
-ONLY_FOR_OWNER=visible to only the owner
+ONLY_FOR_RECEIVER=visible only to the receiver
 ONLY_FOR_SELECTED_PERSON=visible to selected person
 ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Remark
