moved the control buttons onto the top,so as long as the use is logged in, those button will keep in handy.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 04 17:24:35 EDT 2013
+#Tue Jun 04 20:31:35 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -45,6 +45,7 @@ button_update=Update
 contributeContent=\u65B0\u95FB\uFF0C\u8D44\u6599\uFF0C\u56FE\u50CF\uFF0C\u4E66\u7B7E
 contributeTwitter=\u7948\u7977\uFF0C\u7B14\u8BB0\uFF0C\u5907\u5FD8
 default_welcome_message=\u6B22\u8FCE\u6B22\u8FCE\:]\uFF0C\u5982\u6709\u5E0C\u671B\u6539\u8FDB\u7684\u5730\u65B9\uFF0C\u8BF7\u5230tao\u7684\u7A7A\u95F4\u7559\u8A00\u3002
+doublespace=\  
 entity_create=\u6DFB\u52A0{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
