--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 04 17:24:35 EDT 2013
+#Tue Jun 04 20:31:35 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
@@ -45,6 +45,7 @@ button_update=Update
 contributeContent=I just got something\!
 contributeTwitter=I'm gonna write somthing\!
 default_welcome_message=Welcome\uFF0Cshould you have any question, please go to Tao's space and leave message.
+doublespace=\  
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
