make the list larger: now it's from 20-100 per page.

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 04 20:31:35 EDT 2013
+#Tue Jun 04 20:43:15 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
@@ -32,7 +32,7 @@ button_end=End
 button_find=Find
 button_gotohome=go visit {0}'s space
 button_home=Home
-button_myhome={0}'s Home
+button_myhome=Home Page of {0}
 button_proceed=Proceed
 button_reset=Reset
 button_save=Save
