--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 04 20:31:35 EDT 2013
+#Sun Jun 09 21:03:19 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -14,7 +14,7 @@ ONLY_FOR_RECEIVER=\u4EC5\u5BF9\u63A5\u6536\u8005\u53EF\u89C1
 ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
 ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
-SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
+SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u770B\u89C1
 Twitter=\u968F\u7B14
 User\ Account=\u7528\u6237
 admin_suggested_tag1=\u5B9E\u7528\u7F51\u7AD9
