added by roo! thought some method is no one called now, while roo still want them to be there so to avoid fight with roo every time, I agree to add those method back.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,12 +1,17 @@
-#Created by JInto - www.guh-software.de
-#Thu May 02 16:20:30 EDT 2013
+#Updated at Mon Jun 17 10:27:17 EDT 2013
+#Mon Jun 17 10:27:17 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
+label_com_aeiou_bigbang_domain_bigtag_commontagname=Common Tag Name
+label_com_aeiou_bigbang_domain_bigtag_contenttitle=Content Title
+label_com_aeiou_bigbang_domain_bigtag_contenturl=Content U R L
 label_com_aeiou_bigbang_domain_bigtag_id=Id
 label_com_aeiou_bigbang_domain_bigtag_owner=-\u4E66\u7B7E/\u65E5\u5FD7
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=\u540D\u79F0 *
+label_com_aeiou_bigbang_domain_bigtag_twittercontent=Twitter Content
+label_com_aeiou_bigbang_domain_bigtag_twittertitle=Twitter Title
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
@@ -19,6 +24,7 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_content_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
@@ -59,6 +65,7 @@ label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_lastupdate=\u6700\u540E\u66F4\u65B0
